Added computing logic

--- a/lmmCalc/templates/lmmCalc/base.html
+++ b/lmmCalc/templates/lmmCalc/base.html
@@ -3,6 +3,13 @@
   <head>
     <title>Web LMM Calculator</title>
     {% block inlineStyles %}
+      <style type="text/css">
+        small {
+          position: absolute;
+          bottom: 0;
+          text-align: center;
+        }
+      </style>
     {% endblock inlineStyles %}
   </head>
   <body>
